--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 {% include intro/intro.html %}
 {% include about/about.html %}
 {% include services/services.html %}
+{% include how-it-works/how-it-works.html %}
 {% include advantages/advantages.html %}
