add new sections

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 {% include intro/intro.html %}
 {% include about/about.html %}
 {% include services/services.html %}
+{% include partnership/partnership.html %}
 {% include how-it-works/how-it-works.html %}
 {% include advantages/advantages.html %}
