--- a/_pages/about.html
+++ b/_pages/about.html
@@ -3,4 +3,9 @@ permalink: '/#about'
 title: 'Wha is Alacrity?'
 ---
 
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <section>ABOUT NEW</section>
