--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -3,6 +3,11 @@ permalink: '/blogg'
 title: 'Implex Blog'
 ---
 
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <div class="content">
   <h1>Implex Blog</h1>
   <h2>Here we publish the most interesting things we experienced during our work</h2>
