--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
 ---
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
 
 
 {% include intro/intro.html %}
@@ -8,3 +12,5 @@
 {% include partnership/partnership.html %}
 {% include how-it-works/how-it-works.html %}
 {% include advantages/advantages.html %}
+{% include clients/clients.html %}
+{% include blog/blog.html %}
