--- a/_pages/careers.html
+++ b/_pages/careers.html
@@ -3,6 +3,11 @@ permalink: '/careers'
 title: 'Careers'
 ---
 
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <div class="content">
   <h1>Our vacancies</h1>
   {% assign category_posts = site.categories["Vacancy"] %}
