--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,11 @@
 layout: default
 title: Blog
 ---
+<!--
+  ~ Copyright (c) 2022. Implex
+  ~ All rights reserved
+  -->
+
 <h1>Latest Posts</h1>
 
 <ul>
