add adaptation and remove comments from build site

--- a/staff.html
+++ b/staff.html
@@ -2,10 +2,12 @@
 layout: default
 title: Staff
 ---
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <h1>Staff</h1>
 
