--- a/_pages/about.html
+++ b/_pages/about.html
@@ -3,9 +3,11 @@ permalink: '/#about'
 title: 'Wha is Alacrity?'
 ---
 
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <section>ABOUT NEW</section>
