--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -3,10 +3,12 @@ permalink: '/blogg'
 title: 'Implex Blog'
 ---
 
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <div class="content">
   <h1>Implex Blog</h1>
