--- a/_pages/careers.html
+++ b/_pages/careers.html
@@ -3,10 +3,12 @@ permalink: '/careers'
 title: 'Careers'
 ---
 
+{% comment %}
 <!--
   ~ Copyright (c) 2022. Implex
   ~ All rights reserved
   -->
+{% endcomment %}
 
 <div class="content">
   <h1>Our vacancies</h1>
