add contact-us section

--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@
 {% include advantages/advantages.html %}
 {% include clients/clients.html %}
 {% include blog/blog.html %}
+{% include contact-us/contact-us.html %}
