--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -11,9 +11,5 @@ title: 'Implex Blog'
 {% endcomment %}
 
 <div class="content">
-  <h1>Implex Blog</h1>
-  <h2>Here we publish the most interesting things we experienced during our work</h2>
-  {% for post in site.categories["Blog"] %}
-    {% include post-preview/post-preview.html post=post %}
-  {% endfor %}
+  {% include blog-posts/blog-posts.html title='Implex Blog' subtitle='Whole list of blog posts' %}
 </div>
