Style fixes for case study pages

--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -86,7 +86,7 @@ layout: default-static-header
           <div>The platform integrates with a number of APIs, including VIN API and Carfax, vehicle history report database, as well as with the bar code reader.</div>
         </div>
       </div>
-      <div class="text-center"><strong>The tools and technologies we used were:</strong></div>
+      <div class="text-center technologiess"><strong>The tools and technologies we used were:</strong></div>
       <div class="logos-row">
         <div>
           <img src="https://thumb.tildacdn.com/tild6535-6133-4631-b034-306531333530/-/resize/320x/-/format/webp/C_sharp_logo4-320x29.png" alt="C# ASP .Net back-end">
