--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -103,7 +103,7 @@ layout: default-static-header
           <div>A variety of interaction and integration solutions ensure that future applicants stay fully updated and connected throughout the admission proces</div>
         </div>
       </div>
-      <div class="text-center"><strong>The tools and technologies we used were:</strong></div>
+      <div class="text-center technologies"><strong>The tools and technologies we used were:</strong></div>
       <div class="logos-row">
         <div>
           <img src="https://thumb.tildacdn.com/tild6535-6133-4631-b034-306531333530/-/resize/320x/-/format/webp/C_sharp_logo4-320x29.png" alt="C# ASP .Net back-end">
