Added styles for images on case studies pages

--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -15,10 +15,14 @@ layout: default-static-header
     <div class="content">
       <h1>YOY: Ukrainian - it's cool!</h1>
       <div class="col-2">
-        <div class="image-wrapper">
-          <div class="image" style="background-image: url('https://thumb.tildacdn.com/tild6337-3036-4862-b161-653236373836/-/format/webp/2-2.jpg')"></div>
+        <div class="column-wrapper big">
+          <div
+            class="image"
+            id="image1"
+            style="background-image: url('https://thumb.tildacdn.com/tild6337-3036-4862-b161-653236373836/-/format/webp/2-2.jpg')"
+          ></div>
         </div>
-        <div>
+        <div class="column-wrapper big">
           <h2>Project</h2>
           <div><strong><a href="https://www.yoy-app.com/home-engl" target="_blank" rel="noopener noreferrer">YOY</a></strong> is a mobile app for learning the Ukrainian language by primary school students whose native language is Hungarian or Romanian.</div>
           <br/>
@@ -52,7 +56,7 @@ layout: default-static-header
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div>
+        <div class="column-wrapper">
           <h2>Challenge</h2>
           <div>There were an unusual number of requirements and limitations crucial for project success. In addition to product owner inputs, we had also to consider the official education program, teachers' opinions, parents' focus group feedback, investor rules, etc. Many people were involved, so we had to carefully manage all received recommendations without jeopardizing the project scope, budget, and timeline.</div>
           <br />
@@ -60,8 +64,12 @@ layout: default-static-header
           <br />
           <div>One of the most critical requirements was a limited budget. And we didn't have a chance to make a mistake and the opportunity to rework the application in case of failure in our solution.</div>
         </div>
-        <div class="image-wrapper">
-          <div class="image" style="background-image: url('https://thumb.tildacdn.com/tild6165-3430-4237-b037-323635303037/-/format/webp/2-3.jpg')"></div>
+        <div class="column-wrapper big">
+          <div
+            class="image"
+            id="image2"
+            style="background-image: url('https://thumb.tildacdn.com/tild6165-3430-4237-b037-323635303037/-/format/webp/2-3.jpg')"
+          ></div>
         </div>
       </div>
     </div>
