--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -15,8 +15,8 @@ layout: default-static-header
     <div class="content">
       <h1>Visual art web encyclopedia</h1>
       <div class="col-2">
-        <div></div>
-        <div>
+        <div class="column-wrapper"></div>
+        <div class="column-wrapper margin-left">
           <h2>Project</h2>
           <div><strong>WikiArt.org</strong> is an online visual art encyclopedia users can edit. It can boast of more than 120 thousand artworks, up to 2.5 million visits, and about 10 million page views a month.</div>
           <br/>
@@ -34,13 +34,13 @@ layout: default-static-header
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div>
+        <div class="column-wrapper">
           <h2>Challenge</h2>
           <div>The web portal required new functions and increasing performance long before our team started working on WikiArt. The existing engine just didn't allow expanding.</div>
           <br />
           <div>The WikiArt team also had numerous ideas and improvements waiting to be implemented. And on top of that, the portal was in desperate need of design renovation.</div>
         </div>
-        <div>
+        <div class="column-wrapper big">
           <div class="image" style="background-image: url('https://thumb.tildacdn.com/tild3332-6335-4361-b236-393934663130/-/format/webp/MacBookPro-1120.png')"></div>
         </div>
       </div>
@@ -61,7 +61,7 @@ layout: default-static-header
   </section>
   <section>
     <div class="content">
-      <h1>Solution</h1>
+      <h2>Solution</h2>
       <div class="text-center sub-heading">Our cooperation lasted for several years and consisted of two active development phases with a stabilization and maintenance period in between.</div>
       <div class="col-2">
         <div>
@@ -113,10 +113,10 @@ layout: default-static-header
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div>
+        <div class="column-wrapper">
           <div class="image" style="background-image: url('https://thumb.tildacdn.com/tild3734-3036-4230-b437-333530333963/-/cover/920x920/center/center/-/format/webp/Combined-iMac2x-920x.png')"></div>
         </div>
-        <div>
+        <div class="column-wrapper big">
           <h2>Results</h2>
           <div>Throughout the years of our cooperation, we helped WikiArt become a powerful, modern, best-in-class portal.</div>
           <br />
