--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -1,6 +1,7 @@
 ---
 title: 'Implex case study: WikiArt'
 permalink: /case-study/wikiart
+showSlider: true
 layout: default-static-header
 ---
 
@@ -16,7 +17,7 @@ layout: default-static-header
       <h1>Visual art web encyclopedia</h1>
       <div class="col-2">
         <div class="column-wrapper"></div>
-        <div class="column-wrapper margin-left">
+        <div class="column-wrapper margin-left column-content">
           <h2>Project</h2>
           <div><strong>WikiArt.org</strong> is an online visual art encyclopedia users can edit. It can boast of more than 120 thousand artworks, up to 2.5 million visits, and about 10 million page views a month.</div>
           <br/>
@@ -34,7 +35,7 @@ layout: default-static-header
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper">
+        <div class="column-wrapper column-content">
           <h2>Challenge</h2>
           <div>The web portal required new functions and increasing performance long before our team started working on WikiArt. The existing engine just didn't allow expanding.</div>
           <br />
@@ -49,7 +50,7 @@ layout: default-static-header
   <section class="section-black">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="https://thumb.tildacdn.com/tild3032-6138-4366-b435-656532653736/-/cover/200x200/center/center/-/format/webp/Ievgen_S.jpg" 
+        avatarUrl="https://thumb.tildacdn.com/tild3032-6138-4366-b435-656532653736/-/cover/200x200/center/center/-/format/webp/Ievgen_S.jpg"
         authorName="Ievgen Silin"
         authorPosition="Co-founder of Wikiart.org"
         authorUrl="https://www.linkedin.com/in/trbrs/"
@@ -64,7 +65,7 @@ layout: default-static-header
       <h2>Solution</h2>
       <div class="text-center sub-heading">Our cooperation lasted for several years and consisted of two active development phases with a stabilization and maintenance period in between.</div>
       <div class="col-2">
-        <div>
+        <div class="column-content">
           <div><strong>Phase 1</strong></div>
           <br />
           <div>In the first phase, we showed our extensive experience in application re-engineering by enhancing and re-designing the web portal's engine.</div>
@@ -76,7 +77,7 @@ layout: default-static-header
             <li>Improved performance through changing the architecture and migrating to the NoSQL database.</li>
           </ul>
         </div>
-        <div>
+        <div class="column-content padding-top">
           <div><strong>Phase 2</strong></div>
           <br />
           <div>The second stage started after a new owner purchased the project and brought many new ideas as well as SEO requirements.</div>
@@ -109,7 +110,7 @@ layout: default-static-header
         </div>
       </div>
     </div>
-  </section> 
+  </section>
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
@@ -118,18 +119,20 @@ layout: default-static-header
         </div>
         <div class="column-wrapper big">
           <h2>Results</h2>
-          <div>Throughout the years of our cooperation, we helped WikiArt become a powerful, modern, best-in-class portal.</div>
-          <br />
-          <div>The achievements we're most proud of are:</div>
-          <ul>
-            <li>Engine performance growth by 30%.</li>
-            <li>Increase of monthly visits from 1.1 to 2.3 million.</li>
-            <li>WikiArt is on the first page of Google search results for art-related queries.</li>
-          </ul>
-          <br />
-          <div>Today, WikiArt is well-known worldwide and recognized as one of the most popular sources of information about art. And we were happy to help it succeed.</div>
-        </div>
+          <div class="column-content">
+            <div>Throughout the years of our cooperation, we helped WikiArt become a powerful, modern, best-in-class portal.</div>
+            <br />
+            <div>The achievements we're most proud of are:</div>
+            <ul>
+              <li>Engine performance growth by 30%.</li>
+              <li>Increase of monthly visits from 1.1 to 2.3 million.</li>
+              <li>WikiArt is on the first page of Google search results for art-related queries.</li>
+            </ul>
+            <br />
+            <div>Today, WikiArt is well-known worldwide and recognized as one of the most popular sources of information about art. And we were happy to help it succeed.</div>
+          </div>
+          </div>
       </div>
     </div>
-  </section>   
+  </section>
 </div>
