add adaptation to case-study page

--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -1,6 +1,7 @@
 ---
 title: 'Implex case study: AdmitMe'
 permalink: /case-study/admit-me
+showSlider: true
 layout: default-static-header
 ---
 
@@ -52,7 +53,7 @@ layout: default-static-header
     <div class="content">
       <div class="col-2">
         {% include quote/quote.html
-          avatarUrl="https://thumb.tildacdn.com/tild3039-3430-4564-b036-373931633933/-/cover/200x200/center/center/-/format/webp/Eric.jpg" 
+          avatarUrl="https://thumb.tildacdn.com/tild3039-3430-4564-b036-373931633933/-/cover/200x200/center/center/-/format/webp/Eric.jpg"
           authorName="Eric Allen"
           authorPosition="Founder of Admit.Me, President in Admit Advantage"
           authorUrl="https://www.linkedin.com/in/ericballen/"
