--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -1,6 +1,7 @@
 ---
 title: 'Implex case study: SmartLane'
 permalink: /case-study/smartlane
+showSlider: true
 layout: default-static-header
 ---
 
@@ -49,7 +50,7 @@ layout: default-static-header
   <section class="section-black">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="https://thumb.tildacdn.com/tild3362-6234-4530-a532-363032363530/-/cover/200x200/center/center/-/format/webp/Daniel_Rodriguez.jpeg" 
+        avatarUrl="https://thumb.tildacdn.com/tild3362-6234-4530-a532-363032363530/-/cover/200x200/center/center/-/format/webp/Daniel_Rodriguez.jpeg"
         authorName="Daniel Rodriguez"
         authorPosition="Adventurer Entrepreneur Developer"
         authorUrl="https://www.linkedin.com/in/danielwrodriguez/"
