--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -1,6 +1,7 @@
 ---
 title: 'Implex case study: YoY'
 permalink: /case-study/yoy
+showSlider: true
 layout: default-static-header
 ---
 
@@ -77,7 +78,7 @@ layout: default-static-header
   <section style="background-color: #00893a;">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="https://thumb.tildacdn.com/tild6236-3862-4039-a466-623030633864/-/cover/200x200/center/center/-/format/webp/ihor.jpg" 
+        avatarUrl="https://thumb.tildacdn.com/tild6236-3862-4039-a466-623030633864/-/cover/200x200/center/center/-/format/webp/ihor.jpg"
         authorName="Ihor Khvorostianyi"
         authorPosition="Language Adviser, Project 'Learning Together'"
         authorUrl="https://www.linkedin.com/in/ihor-khvorostianyi-16584b1b6/"
