add new assets for admit and yoy cases

--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -20,7 +20,7 @@ layout: default-static-header
           <div
             class="image"
             id="image1"
-            style="background-image: url('https://thumb.tildacdn.com/tild6337-3036-4862-b161-653236373836/-/format/webp/2-2.jpg')"
+            style="background-image: url('../../assets/img/case-study/yoy/yoy-1.jpg')"
           ></div>
         </div>
         <div class="column-wrapper big">
@@ -40,16 +40,16 @@ layout: default-static-header
       <br/>
       <div class="logos-row">
         <div>
-          <img src="https://thumb.tildacdn.com/tild3834-3866-4934-b833-323764653539/-/resize/360x/-/format/webp/mon-180.png">
+          <img src="../../assets/img/case-study/yoy/MON.png">
         </div>
         <div>
-          <img src="https://thumb.tildacdn.com/tild3230-6133-4965-a537-393166326530/-/resize/360x/-/format/webp/finland-180.png">
+          <img src="../../assets/img/case-study/yoy/Ministry-for-Foreign-Affairs-of-Finland.png">
         </div>
         <div>
-          <img src="https://thumb.tildacdn.com/tild3034-3638-4166-a463-323662626432/-/resize/360x/-/format/webp/eu-180.png">
+          <img src="../../assets/img/case-study/yoy/Moving-forward-together.png">
         </div>
         <div>
-          <img src="https://thumb.tildacdn.com/tild3862-3164-4666-a137-373036383532/-/resize/360x/-/format/webp/fcg-180.png">
+          <img src="../../assets/img/case-study/yoy/fcg.png">
         </div>
       </div>
     </div>
@@ -69,7 +69,7 @@ layout: default-static-header
           <div
             class="image"
             id="image2"
-            style="background-image: url('https://thumb.tildacdn.com/tild6165-3430-4237-b037-323635303037/-/format/webp/2-3.jpg')"
+            style="background-image: url('../../assets/img/case-study/yoy/yoy-2.jpg')"
           ></div>
         </div>
       </div>
@@ -130,7 +130,7 @@ layout: default-static-header
             <img src="https://static.tildacdn.com/tild6535-6237-4535-a262-333162353139/619c0e2f85a3c956bad2.svg" alt="Google Play">
           </div>
           <div>
-            <img src="https://static.tildacdn.com/tild3837-6464-4533-b866-633136336134/619c0e2faee0e2887cc4.svg" alt="App Store">
+            <img src="../../assets/img/case-study/yoy/appstore.svg" alt="App Store">
           </div>
         </div>
       </div>
