add some optimizations

--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -38,7 +38,7 @@ layout: default-static-header
       </div>
       <br/>
       <br/>
-      <div class="logos-row">
+      <div class="logos-row yoy-logos">
         <div>
           <img src="../../assets/img/case-study/yoy/MON.png">
         </div>
@@ -78,7 +78,7 @@ layout: default-static-header
   <section style="background-color: #00893a;">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="https://thumb.tildacdn.com/tild6236-3862-4039-a466-623030633864/-/cover/200x200/center/center/-/format/webp/ihor.jpg"
+        avatarUrl="../../assets/img/case-study/yoy/avatar.jpg"
         authorName="Ihor Khvorostianyi"
         authorPosition="Language Adviser, Project 'Learning Together'"
         authorUrl="https://www.linkedin.com/in/ihor-khvorostianyi-16584b1b6/"
@@ -90,7 +90,7 @@ layout: default-static-header
     </div>
   </section>
   <section>
-    <div class="content">
+    <div class="content content-wrapper">
       <h1>Solution</h1>
       <div class="text-center sub-heading">We used Flutter on Mobile to save on development efforts. It is an open-source framework by Google for building beautiful, natively compiled, multi-platform applications from a single codebase. As a result, we were able to implement a full set of features with 30% fewer efforts.</div>
       <div class="col-2">
@@ -115,19 +115,19 @@ layout: default-static-header
     </div>
   </section>
   <section class="section-grey">
-    <div class="content">
+    <div class="content content-wrapper">
       <h2>Results</h2>
       <div class="text-center">
         <div>Thanks to well-thought-out technological solutions and our team's solid experience in Agile+Waterfall development, we have created an excellent application for Ukrainian schoolchildren. As a result, "Learning Together" and school leaders are starting to launch the Mobile application "ЙОЙ" in educational processes.</div>
         <br />
         <div>This project is of great social importance, and therefore we are delighted to have taken part in it.</div>
         <br />
-        <iframe width="960" height="540" src="https://www.youtube.com/embed/mQPWsBDG_jI" title="YOY: Ukrainian - it’s cool!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="player" src="https://www.youtube.com/embed/mQPWsBDG_jI" title="YOY: Ukrainian - it’s cool!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br />
         <br />
-        <div class="logos-row">
+        <div class="logos-row yoy-logos">
           <div>
-            <img src="https://static.tildacdn.com/tild6535-6237-4535-a262-333162353139/619c0e2f85a3c956bad2.svg" alt="Google Play">
+            <img src="../../assets/img/case-study/yoy/googlestore.svg" alt="Google Play">
           </div>
           <div>
             <img src="../../assets/img/case-study/yoy/appstore.svg" alt="App Store">
