--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -1,5 +1,6 @@
 ---
 title: 'Implex case study: AdmitMe'
+description: 	An example of a solution in education domain - Admit.Me project
 permalink: /case-study/admit-me
 showSlider: true
 layout: default-static-header
