--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -1,5 +1,6 @@
 ---
 title: 'Implex case study: WikiArt'
+description: An example of a high-load solution in arts domain - WikiArt project
 permalink: /case-study/wikiart
 showSlider: true
 layout: default-static-header
