--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -1,5 +1,6 @@
 ---
 title: 'Implex case study: YoY'
+description: An example of a solution in education domain - YoY project
 permalink: /case-study/yoy
 showSlider: true
 layout: default-static-header
