--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 ---
+title: Implex - custom web and mobile apps development
+description: We offer a wide range of services in creative spheres.
+ogImage: ../../assets/img/og-main-image.jpg
 ---
 <!--
   ~ Copyright (c) 2022. Implex
