2nd try - after the site popierdolilo modified:   _pages/case-study/bsg/bsg.html

--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -22,13 +22,13 @@ layout: default-static-header
         </div>
         <div class="column-wrapper margin-left">
           <h2>Client</h2>
-          <div><strong>SmartLane</strong> was a B2B startup for car dealers selling used cars across the USA via the marketplace. It had a whole range of functions to support the workflows of car dealers and inspectors, the auctions workflow, live and proxy bidding, post-auction counter offering, and deal closing.</div>
+          <div>Berezha Security Group is a cybersecurity services company focused on application security, penetration testing, and data security consulting.</div>
           <br/>
-          <div>The product was geared toward both web and mobile users. It provided an exclusive inspector app to speed up inspections and integrated with different APIs to gather information about vehicles, helping dealers make the right decisions at auctions.</div>
+          <div>Since 2014, the company has delivered 200+ projects for over 100 clients worldwide. Its customers come from a range of business sectors, including software engineering, fintech, retail, healthcare, media, gaming, legal and advisory, and others.</div>
           <br/>
           <br/>
-          <div><strong>Industry</strong>: Automotive</div>
-          <div><strong>Location</strong>: USA</div>
+          <div><strong>Industry</strong>: Cybersecurity</div>
+          <div><strong>Location</strong>: Ukraine</div>
         </div>
       </div>
     </div>
