Addig the 2nd paragraph of bsg case

--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -12,7 +12,7 @@ layout: default-static-header
   ~ All rights reserved
   -->
 {% endcomment %}
-<div class="case-study smartlane">
+<div class="case-study bsg">
   <section>
     <div class="content">
       <h1>A lightning-fast website for a reputable cybersecurity company in Ukraine</h1>
@@ -38,12 +38,14 @@ layout: default-static-header
       <div class="col-2">
         <div class="column-wrapper big">
           <h2>Challenge</h2>
-          <div>Implex began working with SmartLane at the startup's early stage. Though the client was experienced in running startups, this time, they were on a tight budget and had only 4 months to launch an MVP.</div>
+          <div>In 2020, Berezha Security Group rebranded as BSG. The next logical step was redesigning the brand book and the corporate website. But redesign was only part of the story. The ultimate goal was to make the website fast and SEO-friendly, keeping its Google PageSpeed Insights scores in the green 90-100 range. The upgrade was expected to be gradual, with the original URL kept intact to maintain ranking on Google.</div>
           <br />
-          <div>In the beginning, we only had clickable wireframes. Our task was to create a 'skeleton' of the solution while the designer was putting the finishing touches. Then, we had to launch a neatly designed MVP with a dedicated environment for demonstrating the product. The later phase required us to fully develop the product and prepare it for the next funding round.</div>
+          <div>Certain functions were to stay, too. For example, the website administrator reserved the right to change content without the programmer's or layout designer's help – just like with the previous, WordPress-powered website.</div>
+          <br />
+          <div>Developing a tool for pre-qualifying leads came as an extra task.</div>
         </div>
         <div class="column-wrapper big">
-          <div class="image" id="image2" style="background-image: url('../../assets/img/case-study/smartlane/smartlane-2.png')"></div>
+          <div class="image" id="image2" style="background-image: url('../../assets/img/case-study/bsg/challenge_!!.png')"></div>
         </div>
       </div>
     </div>
