--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -53,7 +53,7 @@ layout: default-static-header
   <section class="section-black">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="../../assets/img/case-study/bsg/avatar.jpeg"
+        avatarUrl="../../assets/img/case-study/bsg/avatar.webp"
         authorName="Andriy Varusha"
         authorPosition="COO and co-founder"
         authorUrl="https://www.linkedin.com/in/andriyvarusha/"
@@ -100,7 +100,7 @@ layout: default-static-header
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper big">
+        <div class="column-wrapper small">
           <h2>Results</h2>
           <ul>
             <li>A brand-new design comes with perfect usability and successfully represents the BSG brand.</li>
@@ -109,11 +109,8 @@ layout: default-static-header
             <li>An updated deployment scheme empowers the admin to make changes, deploy them in the test environment in one click, run tests, and send them to the production environment – again in just one click.</li>
             <li>If an error pops up, the admin can easily roll back to any of the previous website versions.</li>
           </ul>
-          <div>It was critical for our client to demonstrate a fully functional MVP on time to get the next round of financing. We did our best to make that happen. We also delivered a full set of technical documentation required for Series A investing.</div>
-          <br />
-          <div>In the end, the new functions and workflows in the mobile and web apps greatly extended the capabilities of dealers. The automation of the inspection process made it possible to thoroughly inspect a car in 45 minutes, compared to 1-2 hours it took to do this manually. Even more, a brief examination took only 15 minutes.</div>
         </div>
-        <div class="column-wrapper margin-left">
+        <div class="column-wrapper huge">
           <div class="image" id="image3" style="background-image: url('../../assets/img/case-study/bsg/results.webp')"></div>
         </div>
       </div>
