Fix Technologies row

--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -64,7 +64,6 @@ layout: default-static-header
   <section>
     <div class="content">
       <h1>Solution</h1>
-      <div class="text-center sub-heading">Our cooperation lasted for several years and consisted of two active development phases with a stabilization and maintenance period in between.</div>
       <div class="col-2">
         <div class="column-content">
           <div><strong>Design</strong></div>
@@ -72,12 +71,13 @@ layout: default-static-header
           <div>Our UI/UX specialist collaborated with BSG's marketing director to create a new design fully matching the updated brand book and the client's expectations. An Implex engineer developed a sophisticated dynamic wizard form to pre-qualify leads and integrated it into a static website.</div>
           <div>The company's blog was kept as a separate WordPress website. It was only redesigned to fit the new brand book.</div>
         </div>
-        <div class="column-content">
+        <div class="column-content padding-top">
           <div><strong>Optimization</strong></div>
           <br />
           <div>The updated website works much faster, as static pages are now generated at frontend build-time using React components.</div>
           <br />
           <div>Building a new CMS from scratch equaled budget overrun. To avoid that, we reused the repository web editor. The website admin can edit existing pages or create new ones using readily available blocks.</div>
+          <br />
         </div>
       </div>
       <div class="text-center technologiess"><strong>The tools and technologies we used were:</strong></div>
