fix of top padding for results and technologies

--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -65,7 +65,7 @@ layout: default-static-header
     <div class="content">
       <h1>Solution</h1>
       <div class="col-2">
-        <div class="column-content">
+        <div class="column-content padding-top">
           <div><strong>Design</strong></div>
           <br />
           <div>Our UI/UX specialist collaborated with BSG's marketing director to create a new design fully matching the updated brand book and the client's expectations. An Implex engineer developed a sophisticated dynamic wizard form to pre-qualify leads and integrated it into a static website.</div>
@@ -81,6 +81,7 @@ layout: default-static-header
         </div>
       </div>
       <div class="text-center technologiess"><strong>The tools and technologies we used were:</strong></div>
+      <br />
       <div class="logos-row">
         <div>
           <img src="../../assets/img/case-study/icons/logo_html.png" alt="HTML 5">
