--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -101,7 +101,7 @@ layout: default-static-header
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper small">
+        <div class="column-wrapper big">
           <h2>Results</h2>
           <ul>
             <li>A brand-new design comes with perfect usability and successfully represents the BSG brand.</li>
