Fix font size for BSG and in parallel deleting extra div for Wiki case

--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -103,13 +103,15 @@ layout: default-static-header
       <div class="col-2">
         <div class="column-wrapper big">
           <h2>Results</h2>
-          <ul>
-            <li>A brand-new design comes with perfect usability and successfully represents the BSG brand.</li>
-            <li>The website scores a gorgeous 95-100 on Google PageSpeed Insights for desktop and mobile.</li>
-            <li>Modular code lets the website admin reuse the existing elements to create new pages.</li>
-            <li>An updated deployment scheme empowers the admin to make changes, deploy them in the test environment in one click, run tests, and send them to the production environment – again in just one click.</li>
-            <li>If an error pops up, the admin can easily roll back to any of the previous website versions.</li>
-          </ul>
+          <div class="column-content">
+            <ul>
+              <li>A brand-new design comes with perfect usability and successfully represents the BSG brand.</li>
+              <li>The website scores a gorgeous 95-100 on Google PageSpeed Insights for desktop and mobile.</li>
+              <li>Modular code lets the website admin reuse the existing elements to create new pages.</li>
+              <li>An updated deployment scheme empowers the admin to make changes, deploy them in the test environment in one click, run tests, and send them to the production environment – again in just one click.</li>
+              <li>If an error pops up, the admin can easily roll back to any of the previous website versions.</li>
+            </ul>
+          </div>
         </div>
         <div class="column-wrapper huge">
           <div class="image" id="image3" style="background-image: url('../../assets/img/case-study/bsg/results.webp')"></div>
