- Fixes in BSG case - finding and fix in smartlane - Adding BSG to the list of cases

--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -77,12 +77,10 @@ layout: default-static-header
           <div>The updated website works much faster, as static pages are now generated at frontend build-time using React components.</div>
           <br />
           <div>Building a new CMS from scratch equaled budget overrun. To avoid that, we reused the repository web editor. The website admin can edit existing pages or create new ones using readily available blocks.</div>
-          <br />
         </div>
       </div>
-      <div class="text-center technologiess"><strong>The tools and technologies we used were:</strong></div>
-      <br />
-      <div class="logos-row">
+      <div class="text-center technologies"><strong>The tools and technologies we used were:</strong></div>
+      <div class="logos-row padding-top">
         <div>
           <img src="../../assets/img/case-study/icons/logo_html.png" alt="HTML 5">
         </div>
