--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -88,7 +88,7 @@ layout: default-static-header
           <div>The platform integrates with a number of APIs, including VIN API and Carfax, vehicle history report database, as well as with the bar code reader.</div>
         </div>
       </div>
-      <div class="text-center technologiess"><strong>The tools and technologies we used were:</strong></div>
+      <div class="text-center technologies"><strong>The tools and technologies we used were:</strong></div>
       <div class="logos-row">
         <div>
           <img src="../../assets/img/case-study/icons/C-sharp.png" alt="C# ASP .Net back-end">
