--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -80,7 +80,7 @@ layout: default-static-header
             <li>Improved performance through changing the architecture and migrating to the NoSQL database.</li>
           </ul>
         </div>
-        <div class="column-content padding-top">
+        <div class="column-content">
           <div><strong>Phase 2</strong></div>
           <br />
           <div>The second stage started after a new owner purchased the project and brought many new ideas as well as SEO requirements.</div>
