--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -80,18 +80,19 @@ layout: default-static-header
         </div>
       </div>
       <div class="text-center technologies"><strong>The tools and technologies we used were:</strong></div>
-      <div class="logos-row padding-top">
+      <br />
+      <div class="logos-row">
         <div>
-          <img src="../../assets/img/case-study/icons/logo_html.png" alt="HTML 5">
+          <img src="../../assets/img/case-study/icons/logo_html.png" alt="HTML 5" style="max-height: 100px;">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/logo_css.png" alt="CSS 3">
+          <img src="../../assets/img/case-study/icons/logo_css.png" alt="CSS 3" style="max-height: 100px;">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/javascript-logo.png" alt="Vanilla Javascript">
+          <img src="../../assets/img/case-study/icons/javascript-logo.png" alt="Vanilla Javascript" style="max-height: 100px;">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/react-logo.png" alt="React components">
+          <img src="../../assets/img/case-study/icons/react-logo.png" alt="React components" style="max-height: 100px;">
         </div>
       </div>
     </div>
