Change in Challenge image format

--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -22,7 +22,7 @@ layout: default-static-header
         </div>
         <div class="column-wrapper margin-left">
           <h2>Client</h2>
-          <div>Berezha Security Group is a cybersecurity services company focused on application security, penetration testing, and data security consulting.</div>
+          <div class="column-content">Berezha Security Group is a cybersecurity services company focused on application security, penetration testing, and data security consulting.</div>
           <br/>
           <div>Since 2014, the company has delivered 200+ projects for over 100 clients worldwide. Its customers come from a range of business sectors, including software engineering, fintech, retail, healthcare, media, gaming, legal and advisory, and others.</div>
           <br/>
@@ -38,7 +38,7 @@ layout: default-static-header
       <div class="col-2">
         <div class="column-wrapper big">
           <h2>Challenge</h2>
-          <div>In 2020, Berezha Security Group rebranded as BSG. The next logical step was redesigning the brand book and the corporate website. But redesign was only part of the story. The ultimate goal was to make the website fast and SEO-friendly, keeping its Google PageSpeed Insights scores in the green 90-100 range. The upgrade was expected to be gradual, with the original URL kept intact to maintain ranking on Google.</div>
+          <div class="column-content">In 2020, Berezha Security Group rebranded as BSG. The next logical step was redesigning the brand book and the corporate website. But redesign was only part of the story. The ultimate goal was to make the website fast and SEO-friendly, keeping its Google PageSpeed Insights scores in the green 90-100 range. The upgrade was expected to be gradual, with the original URL kept intact to maintain ranking on Google.</div>
           <br />
           <div>Certain functions were to stay, too. For example, the website administrator reserved the right to change content without the programmer's or layout designer's help – just like with the previous, WordPress-powered website.</div>
           <br />
